5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1618_2920.log
== TEST (2019-04-02 11:21:40) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = gramas / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(preco_a_ser_pago)
-- OUTPUT:
33.31301115241636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:23:54) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas/0.001) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
33313.01
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:24:16) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
33.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:03) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas / 0,001) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- ERROR:
File "XXXX", line 4
    pf = (gramas / 0,001) / 26.90
                       ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:13) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas / 0.001) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
33313.01
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:29:38) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas / 0.1) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
333.13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:14) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas * 100) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
3331.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:31:31) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas / 0.001) * 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
24105628.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:32:43) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas * 0.001) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
0.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:32:58) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas * 0.1) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
3.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:35:02) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas / 1000) / 26.90
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
0.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:37:07) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas * 26.90) / 1000
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:37:41) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas * 26.90) / 1000
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:37:58) 
-- CODE:
gramas = float(input("g: "))
num_bebidas = int(input("bebidas: "))
quant_sobremesas = int(input("sobremesas: "))
pf = (gramas * 26.90) / 1000
sn = 3.50 * num_bebidas
sobremesa = 3.0 * quant_sobremesas
preco_a_ser_pago = pf + sn + sobremesa
print(round(preco_a_ser_pago, 2))
-- EXECUTION TIME:
0.13956
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
